$Date$

PCNM package ChangeLog at http://sedar.r-forge.r-project.org/

Version 1.9

	* Space-time interaction: new functions STImodels.R, quickSTI.R, and manovRDa.R.
	
	* New data set: trichoptera.rda
	
	* PCNM.R: small changes.
	
Version 1.8

	* PCNM.R: added computation of Moran's I for the computed PCNMs.
	
Version 1.7

	* dbMEM option added to PCNM.R to compute db-MEM eigenfunctions.
	
	* PCNM.R now outputs spanning and thresh.
	
	* PCNM.R transfers a parameter 'diagonal' to pcoa.all.R.

Version 1.6

	* Fixes in Rd files to pass R-devel parser 2 check, and cleaning
	of some Rd entries.

	* added this ChangeLog.

	* PL & DB crosschecked the functions and fixed diffuse places in
	pcoa.R, pcoa.all.R, and quickPCNM.R.  Documentation updated.

	* Added anova.ccabyaxis.R from vegan (against JO's ideals of
	software development).

	* Removed broken.stick.R which was duplicating vegan::bstick(). 
	
Version 1.5

	* Minor fixes in PCNM.R and pcoa.Rd.  

	* quickPCNM.R: a quick temporary fix to pass 'cutoff' to
	vegan::anova.ccabyaxis which was changed to cope with PL's wish to
	bail out from lengthy analysis after hitting insignificant axes.

Version 1.4

	* Initial import of the Legendre and Borcard package.